Add some services. Add schedule. Page now looks better.

--- a/main.html
+++ b/main.html
@@ -4,57 +4,106 @@
   <meta charset="utf-8">
   <title>Inception</title>
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
  </head>
  <body>
-  <section>
-    <article>
-      <p>YouTube
-        <a href="https://www.youtube.com" target="_blank">
-          <img src="resources/youtube.png" alt="YouTube" height="64" width="64">
-        </a>
-      </p>
-      <p>Twitch
-        <a href="https://www.twitch.tv/directory/following" target="_blank">
-          <img src="resources/twitch.png" alt="Twitch" height="64" width="64">
-        </a>
-      </p>
-      <p>VK
-        <a href="https://vk.com/thecoldstyle" target="_blank">
-          <img src="resources/vk.png" alt="VK" height="64" width="64">
-        </a>
-      </p>
-      <p>SoundCloud
-        <a href="https://soundcloud.com" target="_blank">
-          <img src="resources/soundcloud.png" alt="SoundCloud" height="64" width="64">
-        </a>
-      </p>
-      <p>Yandex
-        <a href="https://www.yandex.ru" target="_blank">
-          <img src="resources/yandex.png" alt="Yandex" height="64" width="64">
-        </a>
-      </p>
-      <p>Google
-        <a href="https://www.google.ru" target="_blank">
-          <img src="resources/google.png" alt="Google" height="64" width="64">
-        </a>
-      </p>
-      <p>DuckDuckGo
-        <a href="https://duckduckgo.com/" target="_blank">
-          <img src="resources/duckduckgo.png" alt="DuckDuckGo" height="64" width="64">
-        </a>
-      </p>
-      <p>GitHub
-        <a href="https://github.com/" target="_blank">
-          <img src="resources/github.png" alt="GitHub" height="64" width="64">
-        </a>
-      </p>
-      <p>2ch
-        <a href="https://2ch.pm/biz/" target="_blank">
-          <img src="resources/2ch.png" alt="2ch" height="64" width="64">
-        </a>
-      </p>
-    </article>
-  </section>
+   <div id="media">Media</div>
+   <div id="youtube">
+     <a href="https://www.youtube.com" title="YouTube" target="_blank">
+       <img src="resources/youtube.png" alt="YouTube" height="60" width="60">
+     </a>
+   </div>
+   <div id="twitch">
+     <a href="https://www.twitch.tv/directory/following" title="Twitch" target="_blank">
+       <img src="resources/twitch.png" alt="Twitch" height="60" width="60">
+     </a>
+   </div>
+   <div id="soundcloud">
+     <a href="https://soundcloud.com" title="SoundCloud" target="_blank">
+       <img src="resources/soundcloud.png" alt="SoundCloud" height="60" width="60">
+     </a>
+   </div>
+   <div id="social">Social</div>
+   <div id="vk">
+     <a href="https://vk.com/thecoldstyle" title="VK" target="_blank">
+       <img src="resources/vk.png" alt="VK" height="60" width="60">
+     </a>
+   </div>
+   <div id="instagram">
+     <a href="https://www.instagram.com" title="Instagram" target="_blank">
+       <img src="resources/instagram.png" alt="Instagram" height="60" width="60">
+     </a>
+   </div>
+   <div id="twitter">
+     <a href="https://twitter.com" title="Twitter" target="_blank">
+       <img src="resources/twitter.png" alt="Twitter" height="60" width="60">
+     </a>
+   </div>
+   <div id="facebook">
+     <a href="https://www.facebook.com" title="Facebook" target="_blank">
+       <img src="resources/facebook.png" alt="Facebook" height="60" width="60">
+     </a>
+   </div>
+   <div id="search">Search</div>
+   <div id="google">
+     <a href="https://www.google.ru" title="Google" target="_blank">
+       <img src="resources/google.png" alt="Google" height="60" width="60">
+     </a>
+   </div>
+   <div id="yandex">
+     <a href="https://www.yandex.ru" title="Yandex" target="_blank">
+       <img src="resources/yandex.png" alt="Yandex" height="60" width="60">
+     </a>
+   </div>
+   <div id="duckduckgo">
+     <a href="https://duckduckgo.com/" title="DuckDuckGo" target="_blank">
+       <img src="resources/duckduckgo.png" alt="DuckDuckGo" height="60" width="60">
+     </a>
+   </div>
+   <div id="mail">Mail</div>
+   <div id="gmail">
+     <a href="https://mail.google.com/" title="GoogleMail" target="_blank">
+       <img src="resources/gmail.png" alt="GoogleMail" height="60" width="60">
+     </a>
+   </div>
+   <div id="ymail">
+     <a href="https://mail.yandex.ru/" title="YandexMail" target="_blank">
+       <img src="resources/ymail.png" alt="YandexMail" height="60" width="60">
+     </a>
+   </div>
+   <div id="clouds">Clouds</div>
+   <div id="gdrive">
+     <a href="https://drive.google.com/drive/my-drive" title="GoogleDrive" target="_blank">
+       <img src="resources/gdrive.png" alt="GoogleDrive" height="60" width="60">
+     </a>
+   </div>
+   <div id="ydisk">
+     <a href="https://disk.yandex.ru/client/disk" title="YandexDisk" target="_blank">
+       <img src="resources/ydisk.png" alt="YandexDisk" height="60" width="60">
+     </a>
+   </div>
+   <div id="programming">Programming</div>
+   <div id="github">
+     <a href="https://github.com/" title="GitHub" target="_blank">
+       <img src="resources/github.png" alt="GitHub" height="60" width="60">
+     </a>
+   </div>
+   <div id="translate">Translate</div>
+   <div id="gtranslate">
+     <a href="https://translate.google.com/" title="GoogleTranslate" target="_blank">
+       <img src="resources/gtranslate.png" alt="GoogleTranslate" height="60" width="60">
+     </a>
+   </div>
+   <div id="read">Read</div>
+   <div id="anon">
+     <a href="https://2ch.pm/biz/" title="2ch" target="_blank">
+       <img src="resources/2ch.png" alt="2ch" height="60" width="60">
+     </a>
+   </div>
+   <div id="schedule">
+     <a href="http://eltech.ru/" title="Schedule" target="_blank">
+       <img src="resources/schedule.jpg" alt="Schedule" height="620" width="300">
+     </a>
+   </div>
  </body>
 </html>
