Add new services

--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
  </head>
  <body>
+   <!-- Media -->
    <div id="media">Media</div>
    <div id="youtube">
      <a href="https://www.youtube.com" title="YouTube" target="_blank">
@@ -23,6 +24,7 @@
        <img src="resources/soundcloud.png" alt="SoundCloud" height="60" width="60">
      </a>
    </div>
+   <!-- Social -->
    <div id="social">Social</div>
    <div id="vk">
      <a href="https://vk.com/thecoldstyle" title="VK" target="_blank">
@@ -44,6 +46,7 @@
        <img src="resources/facebook.png" alt="Facebook" height="60" width="60">
      </a>
    </div>
+   <!-- Search -->
    <div id="search">Search</div>
    <div id="google">
      <a href="https://www.google.ru" title="Google" target="_blank">
@@ -60,6 +63,7 @@
        <img src="resources/duckduckgo.png" alt="DuckDuckGo" height="60" width="60">
      </a>
    </div>
+   <!-- Mail -->
    <div id="mail">Mail</div>
    <div id="gmail">
      <a href="https://mail.google.com/" title="GoogleMail" target="_blank">
@@ -71,6 +75,7 @@
        <img src="resources/ymail.png" alt="YandexMail" height="60" width="60">
      </a>
    </div>
+   <!-- Clouds -->
    <div id="clouds">Clouds</div>
    <div id="gdrive">
      <a href="https://drive.google.com/drive/my-drive" title="GoogleDrive" target="_blank">
@@ -82,24 +87,68 @@
        <img src="resources/ydisk.png" alt="YandexDisk" height="60" width="60">
      </a>
    </div>
+   <div id="dropbox">
+     <a href="https://www.dropbox.com/" title="Dropbox" target="_blank">
+       <img src="resources/dropbox.png" alt="Dropbox" height="60" width="60">
+     </a>
+   </div>
+   <!-- Programming -->
    <div id="programming">Programming</div>
    <div id="github">
      <a href="https://github.com/" title="GitHub" target="_blank">
        <img src="resources/github.png" alt="GitHub" height="60" width="60">
      </a>
    </div>
-   <div id="translate">Translate</div>
-   <div id="gtranslate">
-     <a href="https://translate.google.com/" title="GoogleTranslate" target="_blank">
-       <img src="resources/gtranslate.png" alt="GoogleTranslate" height="60" width="60">
+   <div id="javarush">
+     <a href="https://javarush.ru/" title="JavaRush" target="_blank">
+       <img src="resources/javarush.jpg" alt="JavaRush" height="60" width="60">
      </a>
    </div>
+   <div id="ideone">
+     <a href="http://ideone.com/" title="ideone" target="_blank">
+       <img src="resources/ideone.png" alt="ideone" height="60" width="60">
+     </a>
+   </div>
+   <div id="wolfram">
+     <a href="http://www.wolframalpha.com/" title="WolframAlpha" target="_blank">
+       <img src="resources/wolfram.png" alt="WolframAlpha" height="60" width="60">
+     </a>
+   </div>
+   <div id="mathway">
+     <a href="https://www.mathway.com/" title="Mathway" target="_blank">
+       <img src="resources/mathway.png" alt="Mathway" height="60" width="60">
+     </a>
+   </div>
+   <!-- Read -->
    <div id="read">Read</div>
    <div id="anon">
      <a href="https://2ch.pm/biz/" title="2ch" target="_blank">
        <img src="resources/2ch.png" alt="2ch" height="60" width="60">
      </a>
    </div>
+   <div id="habrahabr">
+     <a href="https://habrahabr.ru/" title="Habrahabr" target="_blank">
+       <img src="resources/habrahabr.jpg" alt="Habrahabr" height="60" width="60">
+     </a>
+   </div>
+   <!-- Other -->
+   <div id="other">Other</div>
+   <div id="gtranslate">
+     <a href="https://translate.google.com/" title="GoogleTranslate" target="_blank">
+       <img src="resources/gtranslate.png" alt="GoogleTranslate" height="60" width="60">
+     </a>
+   </div>
+   <div id="rutracker">
+     <a href="http://rutracker.org/forum/index.php" title="RuTracker" target="_blank">
+       <img src="resources/rutracker.png" alt="RuTracker" height="60" width="60">
+     </a>
+   </div>
+   <div id="lichess">
+     <a href="https://ru.lichess.org/" title="Lichess" target="_blank">
+       <img src="resources/lichess.png" alt="Lichess" height="60" width="60">
+     </a>
+   </div>
+   <!-- Schedule -->
    <div id="schedule">
      <a href="http://eltech.ru/" title="Schedule" target="_blank">
        <img src="resources/schedule.jpg" alt="Schedule" height="620" width="300">
