--- a/main.html
+++ b/main.html
@@ -167,5 +167,11 @@
        <img src="resources/schedule.jpg" alt="Schedule" height="620" width="300">
      </a>
    </div>
+   <!-- Weather -->
+   <div id="weather">
+     <a href="https://yandex.ru/pogoda/saint-petersburg" title="YandexWeather" target="_blank">
+       <img src="https://info.weather.yandex.net/2/2_white.ru.png?domain=ru" alt="YandexWeather" height="100" width="200">
+     </a>
+   </div>
  </body>
 </html>
